<resources>
    <string name="app_name">Booklet</string>

    <string name="activity_add_book">Add book</string>
    <string name="activity_books">Books</string>
    <string name="activity_edit_book">Edit book</string>
    <string name="activity_book_detail">Detail</string>

    <string name="title_not_empty">Title cannot be empty</string>
    <string name="author_not_empty">Author cannot be empty</string>
    <string name="publisher_not_empty">Publisher cannot be empty</string>
    <string name="edition_not_empty">Edition cannot be empty</string>
    <string name="year_not_empty">Published year cannot be empty</string>
    <string name="page_not_empty">Pages cannot be empty</string>
    <string name="summary_not_empty">Summary cannot be empty</string>
    <string name="cover_not_empty">Image cover must be provided</string>
    <string name="select_cover_image">Select Cover Image</string>

    <string name="start_reading">Start reading</string>
    <string name="pause_reading">Pause Reading</string>
    <string name="finish_reading">Finish Reading</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="pause">Pause</string>
    <string name="summary_example">Spring in Action, Sixth Edition guides you through Spring’s core features explained in Craig Walls’ famously clear style. You’ll roll up your sleeves and build a secure database-backed web app step by step. Along the way, you’ll explore reactive programming, microservices, service discovery, RESTful APIs, deployment, and expert best practices.</string>
    <string name="page_example">520</string>
    <string name="paperback">Paperback (pages)</string>
    <string name="published_date_example">February 8, 2022</string>
    <string name="author_example">Craig Walls</string>
    <string name="edition_example">Sixth Edition</string>
    <string name="title">Title</string>
    <string name="title_example">Spring in Action</string>
    <string name="enter_your_book_title">Enter your book title</string>
    <string name="edition">Edition</string>
    <string name="enter_your_book_edition">Enter your book edition</string>
    <string name="author">Author</string>
    <string name="enter_your_book_author">Enter your book author</string>
    <string name="published_time">Published time</string>
    <string name="enter_your_book_published_year">Enter your book published year</string>
    <string name="enter_your_book_s_pages">Enter your book\'s pages</string>
    <string name="summary">Summary</string>
    <string name="cover">Cover</string>
    <string name="add_book">Add book</string>
    <string name="publisher">Publisher</string>
    <string name="enter_your_book_publisher">Enter your book\'s publisher</string>
    <string name="publisher_example">Manning</string>
    <string name="update_book">Update book</string>
</resources>