<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        tools:context=".AddBookActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="0dp"
            android:text="@string/title"
            style="@style/BookInfoLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_book_title"
            android:inputType="textPersonName"
            android:text="@string/title_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/txt_edition"
            android:text="@string/edition"
            style="@style/BookInfoLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_title" />

        <EditText
            android:id="@+id/edt_edition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_book_edition"
            android:inputType="text"
            android:text="@string/edition_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_edition" />

        <TextView
            android:id="@+id/txt_author"
            android:text="@string/author"
            style="@style/BookInfoLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_edition" />

        <EditText
            android:id="@+id/edt_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_book_author"
            android:inputType="textPersonName"
            android:text="@string/author_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_author" />

        <TextView
            android:id="@+id/textView4"
            android:text="@string/published_time"
            style="@style/BookInfoLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_author" />

        <EditText
            android:id="@+id/edt_published_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_book_published_year"
            android:inputType="text"
            android:text="@string/published_date_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/txt_page"
            android:text="@string/paperback"
            style="@style/BookInfoLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_published_year" />

        <EditText
            android:id="@+id/edt_pages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/enter_your_book_s_pages"
            android:inputType="number"
            android:text="@string/page_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_page" />

        <TextView
            android:id="@+id/txt_summary"
            android:text="@string/summary"
            style="@style/BookInfoLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_pages" />

        <EditText
            android:id="@+id/edt_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="8"
            android:text="@string/summary_example"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_summary"/>

        <TextView
            android:id="@+id/text_cover"
            style="@style/BookInfoLabel"
            android:text="@string/cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_summary" />

        <ImageView
            android:id="@+id/img_cover"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_cover"
            app:srcCompat="@drawable/not_yet_available" />

        <Button
            android:id="@+id/btn_add_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/add_book"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_cover" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>